Closed Bug 1492210 Opened 7 years ago Closed 7 years ago

nsCocoaUtils.mm compile error on macOS 10.13 with 10.14 SDK

Categories

(Core :: Widget: Cocoa, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla64
Tracking Status
firefox64 --- fixed

People

(Reporter: mikokm, Assigned: haik)

References

Details

Attachments

(1 file)

Installed Xcode 10 today and encountered this error: widget/cocoa/nsCocoaUtils.mm:1227:30: error: cannot initialize a variable of type 'GeckoAVAuthorizationStatus' with an rvalue of type 'AVAuthorizationStatus' GeckoAVAuthorizationStatus authStatus = I am guessing that the problem insufficients ifdefs, or that they do not like the combination of macOS 10.13 with 10.14 SDK. Fixed the problem locally with static_cast.
Flags: needinfo?(haftandilian)
Looking into this. Until it's fixed, avoid downloading the new Xcode, or if you have access to an older SDK, you can use that with the following MOZCONFIG setting with the path to the older SDK within the Xcode bundle. I'm using the 10.11 SDK that comes with Xcode 7.3.1 to match what we use on try and for shipping builds. ac_add_options --with-macos-sdk=/path/to/the/SDK/MacOSX10.11.sdk
Assignee: nobody → haftandilian
Priority: -- → P1
Flags: needinfo?(haftandilian)
Miko, with the new Xcode Version 10.0 (10A255), my opt build compiles without error. (My debug build is still running). Can you confirm the build of Xcode you have and also include the output of the "xcode-select -p" command?
Flags: needinfo?(mikokm)
This compile error occurred with local ASAN build, using mozconfig[1] that contains: ac_add_options --with-macos-sdk=/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk Without this setting, the system SDK is used and build succeeds. The actual compile error still seems valid, since the code tries to assign enum of type AVAuthorizationStatus to GeckoAVAuthorizationStatus without casting. I have attached a patch to fix this. [1]: https://developer.mozilla.org/en-US/docs/Mozilla/Testing/Firefox_and_Address_Sanitizer#Building_Firefox
Flags: needinfo?(mikokm)
Comment on attachment 9010104 [details] Bug 1492210 - Cast AVAuthorizationStatus to GeckoAVAuthorizationStatus Haik Aftandilian [:haik] has approved the revision.
Attachment #9010104 - Flags: review+
Pushed by mikokm@gmail.com: https://hg.mozilla.org/integration/autoland/rev/07b4e13976f1 Cast AVAuthorizationStatus to GeckoAVAuthorizationStatus r=haik
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla64
See Also: → 1480171
See Also: 1480171
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: