Bug 1492210 - Cast AVAuthorizationStatus to GeckoAVAuthorizationStatus r=haik

Differential Revision: https://phabricator.services.mozilla.com/D6214

--HG--
extra : moz-landing-system : lando